elements/rh-tabs/rh-tab.css
#rhds-container {
  display: flex;
  width: 100%;

  --_button-text-color: var(--rh-tabs-link-color,
    var(--rh-color-text-secondary-on-light, #4d4d4d));
  --_button-focus-outline-color: var(--rh-color-border-interactive-on-light, #0066cc);
}

#rhds-container.dark {
  --_button-text-color: var(--rh-tabs-link-color,
    var(--rh-color-text-secondary-on-dark, #c7c7c7));
  --_button-focus-outline-color: var(--rh-color-border-interactive-on-dark, #73bcf7);
}

/* Context switch on attributes */
:host([active]) #rhds-container {
  --_button-text-color: var(--rh-tabs-link-color,
    var(--rh-color-text-primary-on-light, #151515));
  --_active-tab-border-color: var(--rh-tabs-active-border-color,
    var(--rh-color-accent-brand-on-light, #ee0000));
}

:host([active]) #rhds-container.dark {
  --_button-text-color: var(--rh-tabs-link-color,
    var(--rh-color-text-primary-on-dark, #ffffff));
  --_active-tab-border-color: var(--rh-tabs-active-border-color,
    var(--rh-color-accent-brand-on-dark, #ff442b));
}

/* Box context */
:host([box]) #rhds-container {
  --_inactive-tab-background-color: var(--rh-color-surface-lighter, #f2f2f2);
}

:host([box]) #rhds-container.dark {
  --_inactive-tab-background-color: var(--rh-color-surface-dark, #383838);
}

/* Theme base context */
:host([active][theme="base"]) #rhds-container {
  --_active-tab-border-color: var(--rh-tabs-active-border-color,
    var(--rh-color-border-interactive-on-light, #0066cc));
}

:host([active][theme="base"]) #rhds-container.dark {
  --_active-tab-border-color: var(--rh-tabs-active-border-color,
    var(--rh-color-border-interactive-on-dark, #73bcf7));
}

/* Button Resets */
button {
  display: flex;
  align-items: center;
  background-color: inherit;
  color: var(--_button-text-color);
  padding-block-start: var(--rh-tabs-link-padding-block-start, var(--rh-space-lg, 16px));
  padding-inline-start: var(--rh-tabs-link-padding-inline-start, var(--rh-space-2xl, 32px));
  padding-block-end: var(--rh-tabs-link-padding-block-end, var(--rh-space-lg, 16px));
  padding-inline-end: var(--rh-tabs-link-padding-inline-end, var(--rh-space-2xl, 32px));
  max-width: 200px;
  max-height: 100%;
}

button:focus-visible {
  outline: var(--rh-border-width-md, 2px) solid var(--_button-focus-outline-color);
  outline-offset: -8px;
  border-radius: 10px;
}

button:before {
  border: 0 solid transparent;
}

button:after {
  background-color: transparent;
  border-inline: 0 solid transparent;
  border-block-start: var(--rh-border-width-lg, 3px) solid transparent;
  border-block-end: var(--rh-border-width-sm, 1px) solid transparent;
}

[part="icon"] {
  margin-inline-end: var(--rh-space-md, 8px);
}

/* [active]:not([box]) */
:host([active]:not([box])) button:after {
  border-block-end: var(--rh-border-width-lg, 3px) solid var(--_active-tab-border-color);
}


/* [box][active]) */
:host([active][box]) button:before {
  border-inline-color: var(--_border-color);
  border-inline-start-width: var(--rh-border-width-sm, 1px);
}

:host([active][box]) button:after {
  border-block-start: var(--rh-border-width-lg, 3px) solid var(--_active-tab-border-color);
  border-block-end:
    var(--rh-border-width-sm, 1px)
    solid
    var(--_context-background-color, var(--rh-color-white, #ffffff));
}

/* [box]:not([active]) */
:host([box]:not([active])) #rhds-container {
  background-color: var(--_inactive-tab-background-color);
}

:host([box]:not([active])) button:before {
  border-inline-color: var(--_border-color);
  border-inline-start-width: var(--rh-border-width-sm, 1px);
}

:host([box]:not([active])) button:after {
  border-block-end-color: var(--_border-color);
}

/* .first[box][active]) */
:host(.first[box][active]) button:before {
  border-inline-start-color: var(--_border-color);
  border-inline-start-width: var(--rh-border-width-sm, 1px);
}

/* .first[box]:not([active]) */
:host(.first[box]:not([active])) button:before {
  border-inline-color: transparent;
}

/* .last[box][active] */
:host(.last[box][active]) button:before {
  border-inline-end-color: var(--_border-color);
  border-inline-end-width: var(--rh-border-width-sm, 1px);
}


@media screen and (min-width: 768px) {
  /* [vertical]:not([box]) */
  :host([vertical]:not([box])) button {
    padding-block:
      var(--rh-tabs-link-padding-block-start, var(--rh-space-md, 8px))
      var(--rh-tabs-link-padding-block-start, var(--rh-space-md, 8px));
  } 
   
  /* [vertical][active] */
  :host([vertical][active]) button:after {
    border-block-end: transparent;
  }

  /* [box]:not([vertical], [active]) */
  :host([box]:not([vertical], [active])) button:before {
    border-inline-color: var(--_border-color);
    border-inline-start-width: var(--rh-border-width-sm, 1px);
  }

  /* [box][vertical]:not([active]) */
  :host([box][vertical]:not([active])) button:before {
    border-inline-start-color: transparent;
    border-inline-end:
      var(--rh-border-width-sm, 1px)
      solid
      var(--_border-color);
    border-block-start: 
      var(--rh-border-width-sm, 1px) 
      solid 
      var(--_border-color);
  }

  /* [box]:not([active], [vertical]) */
  :host([box]:not([active], [vertical])) button:after {
    border-block-end-color: var(--_border-color);
  }  

  /* [active][box][vertical] */
  :host([active][box][vertical]) button:after {
    border-block-start: 
      var(--rh-border-width-sm, 1px)
      solid
      var(--_border-color);    
  }

  :host([box][vertical]:not([active])) button:after {
    border-block-end-color: transparent;
  }

  /* .first[vertical][box] */
  :host(.first[vertical][box]) {
    margin-block-start: var(--rh-space-2xl, 32px);
  }

  /* .last[vertical][box]  */
  :host(.last[vertical][box]) {
    margin-block-end: var(--rh-space-2xl, 32px);
  }  

  /* .first[vertical]:not([box]) */
  :host(.first[vertical]:not([box])) {
    margin-block-start: var(--rh-space-xl, 24px);
  }

  /* .last[vertical]:not([box]) */
  :host(.last[vertical]:not([box])) {
    margin-block-end: var(--rh-space-xl, 24px);
  }

  /* [box][active]:not([vertical]) */
  :host([active][box]:not([vertical])) button:after {
    border-block-start: var(--rh-border-width-lg, 3px) solid var(--_active-tab-border-color);
    border-block-end:
      var(--rh-border-width-sm, 1px)
      solid
      var(--_context-background-color, var(--rh-color-white, #ffffff));
  }

  /* .first[box][vertical][active] */
  :host(.first[box][vertical][active]) button:after {
    border-block-start-color: var(--_border-color);
    border-block-start-width: var(--rh-border-width-sm, 1px);
  }

  /* [box][vertical][active] */
  :host([box][vertical][active]) button:before {
    border-inline-start:
      var(--rh-border-width-lg, 3px)
      solid
      var(--_active-tab-border-color);
    border-inline-end:
      var(--rh-border-width-sm, 1px)
      solid
      var(--_context-background-color, var(--rh-color-white, #ffffff));
  }

  /* [active][vertical]:not([box]) */
  :host([vertical][active]:not([box])) button:before {
    border-inline-start: var(--rh-border-width-lg, 3px) solid var(--_active-tab-border-color);
  }

  /* .first[vertical][box]:not([active]) */
  :host(.first[vertical][box]:not([active])) button:before {
    border-block-start-color: transparent
  }  

  /* .first[box][active]:not([vertical]) */
  :host(.first[box][active]:not([vertical])) button:before {
    border-inline-start-color: var(--_border-color);
    border-inline-start-width: var(--rh-border-width-sm, 1px);
  }

  /* .last[box][active]:not[vertical] */
  :host(.last[box][active]:not([vertical])) button:before {
    border-inline-end-color: var(--_border-color);
    border-inline-end-width: var(--rh-border-width-sm, 1px);
  }

  /* .last[box][vertical][active] */
  :host(.last[box][vertical][active]) button:before {
    border-block-end-color: var(--_border-color);
    border-block-end-width: var(--rh-border-width-sm, 1px);
  }

  /* .last[box][vertical]:not([active]) */
  :host(.last[box][vertical]:not([active])) button:after {
    border-block-end: none;
  }

}

